--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
+    "@klarna/react-native-vector-drawable": "^0.3.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "@types/react-native-vector-icons": "^6.4.10",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
@@ -24,6 +27,8 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-vector-image": "^0.3.3",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
