--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@klarna/react-native-vector-drawable": "^0.3.0",
     "@react-native-firebase/app": "^13.0.1",
     "@react-native-firebase/auth": "^13.0.1",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
