--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@klarna/react-native-vector-drawable": "^0.3.0",
     "@react-native-firebase/app": "^13.0.1",
     "@react-native-firebase/auth": "^13.0.1",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -39,6 +40,7 @@
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-vector-image": "^0.3.3",
+    "react-native-video": "^5.2.0",
     "react-native-web": "0.17.1",
     "react-social-login-buttons": "^3.6.0"
   },
