--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@klarna/react-native-vector-drawable": "^0.3.0",
     "@react-native-firebase/app": "^13.0.1",
     "@react-native-firebase/auth": "^13.0.1",
-    "@react-native-picker/picker": "^2.2.1",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -23,24 +23,29 @@
     "@types/react-native-vector-icons": "^6.4.10",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.15",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-deck-swiper": "^2.0.5",
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-eject": "^0.1.2",
     "react-native-elements": "^3.4.2",
     "react-native-fbsdk-next": "^6.1.1",
     "react-native-feather": "^1.1.2",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-redash": "14.2.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-vector-image": "^0.3.3",
     "react-native-video": "^5.2.0",
+    "react-native-view-overflow": "^0.0.5",
     "react-native-web": "0.17.1",
     "react-social-login-buttons": "^3.6.0"
   },
