--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/abril-fatface": "^0.2.0",
+    "@expo-google-fonts/amiko": "^0.2.0",
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo-google-fonts/playfair-display": "^0.2.0",
     "@expo-google-fonts/questrial": "^0.2.0",
@@ -43,6 +44,8 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
+    "react-native-modal": "^13.0.0",
+    "react-native-modalize": "^2.0.12",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-paper": "^4.11.1",
     "react-native-reanimated": "~2.2.0",
