--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "expo-font": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "expo-updates": "~0.10.15",
+    "firebase": "8.2.3",
+    "install": "^0.13.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
