--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@expo/vector-icons": "^12.0.5",
     "@invertase/react-native-apple-authentication": "^2.1.5",
     "@klarna/react-native-vector-drawable": "^0.3.0",
-    "@react-native-community/datetimepicker": "^5.0.1",
+    "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-firebase/app": "^13.0.1",
     "@react-native-firebase/auth": "^13.0.1",
-    "@react-native-picker/picker": "^2.2.1",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
