--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@expo-google-fonts/questrial": "^0.2.0",
     "@expo-google-fonts/raleway": "^0.2.0",
     "@expo/vector-icons": "^12.0.5",
+    "@freakycoder/react-native-bounceable": ">= 0.1.1",
     "@invertase/react-native-apple-authentication": "^2.1.5",
     "@klarna/react-native-vector-drawable": "^0.3.0",
-    "@react-native-community/datetimepicker": "3.5.2",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-firebase/app": "^13.0.1",
     "@react-native-firebase/auth": "^13.0.1",
     "@react-native-picker/picker": "2.1.0",
@@ -38,6 +39,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-counter-input": "^0.1.9",
     "react-native-counters": "^1.2.0",
     "react-native-deck-swiper": "^2.0.5",
     "react-native-dropdown-picker": "^5.2.3",
@@ -50,6 +52,7 @@
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-modal": "^13.0.0",
     "react-native-modalize": "^2.0.12",
+    "react-native-numeric-input": "^1.9.0",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-paper": "^4.11.1",
     "react-native-reanimated": "~2.2.0",
