--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@freakycoder/react-native-bounceable": ">= 0.1.1",
     "@invertase/react-native-apple-authentication": "^2.1.5",
     "@klarna/react-native-vector-drawable": "^0.3.0",
-    "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-firebase/app": "^13.0.1",
     "@react-native-firebase/auth": "^13.0.1",
     "@react-native-picker/picker": "2.1.0",
