--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-paper": "^4.11.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-redash": "14.2.4",
+    "react-native-redux": "^1.0.11",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
@@ -69,7 +70,9 @@
     "react-native-view-overflow": "^0.0.5",
     "react-native-web": "0.17.1",
     "react-native-woodpicker": "^0.3.15",
-    "react-social-login-buttons": "^3.6.0"
+    "react-redux": "^7.2.6",
+    "react-social-login-buttons": "^3.6.0",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
